--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap');
+
 :root{
     --skyblue: rgb(62,191,255);
 }
@@ -9,6 +11,48 @@
     margin: 0px;
 }
 
+body{
+    font-family: "Barlow";
+}
+
+h1{
+    color: white;
+    font-weight: 900;
+    font-size: 4rem;
+    letter-spacing: .5rem;
+    font-family: "Fraunces";
+}
+
+h2{
+    color: rgb(37, 49, 63);
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: "Fraunces";
+}
+
+h3{
+    font-size: 2rem;
+    font-weight: 900;
+    font-family: "Fraunces";
+}
+
+h4{
+    color: gray;
+    font-size: 1.25rem;
+    font-weight: 900;
+    letter-spacing: .5rem;
+    font-family: "Fraunces";
+}
+
+h5{
+    color: gray;
+    font-size: 1.125rem;
+    font-weight: 900;
+
+    font-family: "Fraunces";
+}
+
+
 img, svg{
     max-width: 100%;
     height:auto;
@@ -16,4 +60,442 @@ img, svg{
 
 header{
     background-color: var(--skyblue);
+}
+
+header{
+    display:flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+header > button{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.hero{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+
+    align-items: center;
+    justify-items: center;
+    
+
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+.content > p {
+
+    color: hsl(232, 10%, 55%);
+}
+
+.content > button{
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    width: 150px;
+
+    background-size: contain;
+    background-position: bottom center;
+    border: none;
+    
+    font-size: 1.125rem;
+    font-family: Fraunces;
+}
+
+.egg > button{
+    background-image: linear-gradient(white 50%, rgb(254, 239, 182) 50%);
+}
+
+.cup > button{
+    background-image: linear-gradient(white 50%, rgb(255, 222, 215) 50%);
+}
+.content > button>label{
+    background-color:blue;
+    height: 25%;
+}
+
+
+
+.cherry >h3{
+    color: hsl(167, 40%, 24%);
+}
+
+.cherry > p{
+
+    color: hsl(167, 40%, 24%);
+    line-height: 1.75rem;
+    font-size: 1.125rem;
+}
+
+.orange > h3{
+    color: hsl(198, 62%, 26%);
+}
+
+.orange > p {
+
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    color: hsl(198, 62%, 26%);
+}
+@media screen and (min-width: 280px) and (max-width: 799px) {
+
+    .App{
+        display: grid;
+    }
+    .desktop-hero{
+        display:none;
+    }
+    .hero{
+        padding: 2rem;
+        height: 500px;
+        background-image: url('./images/mobile/image-header.jpg');
+    }
+
+    .hero > h1{
+        text-align: center;
+    }
+
+    .egg, .cup{
+        display: grid;
+        grid-template-rows: 1fr 1.5fr;
+
+    }
+
+    .content{
+        padding: 2rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .content > h2{
+        font-size: 3rem;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .content > p {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+    }
+
+    .content > button{
+        font-size: 1.25rem;
+    }
+
+    .contentTwo{
+        height: 800px;
+    }
+    
+    
+    .contentTwo > p {
+        align-self: center;
+    }
+    
+    .contentTwo.cherry{
+        background-image: url('images/mobile/image-graphic-design.jpg');
+    }
+
+    .contentTwo.orange{
+        background-image: url('images/mobile/image-photography.jpg');
+        background-size: cover;
+    }
+
+    .gallery{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .testimonials{
+        gap: 3rem;
+        padding: 2rem;
+    }
+
+    footer{
+        padding: 4rem 0px;
+    }
+    footer > .links{
+        justify-content: space-evenly ;
+    }
+
+    footer > .social-media{
+        gap: 1rem;
+    }
+    .logoBottom{
+        width: 60%;
+    }
+}
+
+@media screen and (min-width: 800px) {
+
+    .mobile-hero{
+        display:none;
+    }
+    .wrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .hero{
+        grid-area: 1/1/2/3;
+        height: 800px;
+        background-image: url('./images/desktop/image-header.jpg');
+    }
+
+    .egg{
+        grid-area: 2/1/3/3;
+        width: 100%;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+        .egg > .egg.content{
+            width: 100%;
+        }
+
+        .content > h2{
+            width: 100%;
+            padding: 0px 25%;
+            display: flex;
+            flex-direction: column;
+            text-align: start;
+        }
+
+        .content > p{
+            padding: 0px 25%;
+            font-size: 1.125rem;
+            line-height: 1.75rem;
+            text-align: start;
+        }
+
+        .egg>img{
+            grid-area: 1/2/2/3;
+            width:100%;
+            overflow: hidden;
+        }
+
+        .egg>div{
+            grid-area: 1/1/2/2;
+            align-self: center;
+            justify-self: center;
+            width:50%;
+        }
+
+    .cup{
+        grid-area: 3/1/4/3;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+
+        .cup>img{
+            object-fit: cover;
+            width:50%;
+            align-self: center;
+            justify-self: center;
+        }
+
+        .cup > div {
+            align-self: center;
+            justify-self: center;
+            width:50%;
+        }
+    
+    .contentTwo{
+        height: 650px;
+        gap: 2rem;
+    }
+
+    .contentTwo > h3{
+        padding: 0px 25%;
+    }
+    .contentTwo > p{
+        padding: 0px 25%;
+        align-self: start;
+    }
+
+    .contentTwo.cherry{
+        background-image: url('./images/desktop/image-graphic-design.jpg');
+    }
+
+    .contentTwo.orange{
+        background-position: center center;
+        background-size: cover;
+        background-image: url('./images/desktop/image-photography.jpg');
+    }
+
+    .testimonials{
+        grid-area:5/1/6/3;
+        grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 0px;
+        padding: 5rem;
+    }
+
+    .testimonials > .header{
+        grid-area: 1/1/2/4;
+    }
+
+    .testimonials > .container{
+        padding: 8rem;
+    }
+
+    .gallery{
+        grid-area: 6/1/7/3;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+
+    footer{
+        padding: 5rem;
+    }
+
+    footer > .links{
+        justify-content: center;
+        gap: 4rem;
+    }
+
+    footer > .social-media{
+        gap: 2rem;
+    }
+    .logoBottom{
+        width: 10%;
+    }
+}
+
+.hero > h1{
+    align-self: center;
+}
+
+.hero > img{
+    align-self: start;
+}
+
+.content{
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 2rem;
+}
+
+.contentTwo > img {
+    grid-area: 1/1/2/2;
+    
+}
+.contentTwo{
+    display: grid;
+    grid-template-rows: 1fr .5fr .5fr;
+
+}
+
+.contentTwo>h3{
+    grid-area: 2/1/3/2;
+    align-self: end;
+    justify-items: center;
+    text-align: center;
+}
+
+.contentTwo>p{
+    text-align: center;
+ 
+    grid-area: 3/1/4/2;
+}
+
+.contentTwo.cherry{
+    grid-area: 4/1/5/2;
+    background-size: cover;
+    background-position: center center;
+    
+}
+
+.contentTwo.orange{
+
+    grid-area: 4/2/5/3;
+
+    background-repeat: no-repeat;
+
+    background-position: center center;
+
+}
+.cup.hero{
+    content: url('./images/mobile/image-stand-out.jpg');
+}
+
+.testimonials{
+    display:grid;
+
+    align-items: center;
+    justify-items: center;
+}   
+
+.container{
+    display:grid;
+    gap: 1rem;
+    justify-items: center;
+    align-items: center;
+}
+    .container.emily>div.profile-pic{
+        content: url('images/image-emily.jpg');
+        height: 80px;
+        border-radius: 50%;
+    }
+
+    .container.thomas>div.profile-pic{
+        content: url('images/image-thomas.jpg');
+        height: 80px;
+        border-radius: 50%;
+    }
+
+    .container.jennie>div.profile-pic{
+        content: url('images/image-jennie.jpg');
+        height: 80px;
+        border-radius: 50%;
+    }
+
+    .container > p{
+        text-align: center;
+    }
+
+    .container > h5{
+        text-align: center;
+    }
+
+.gallery{
+    display:grid;
+
+}
+
+footer{
+    background-color: rgb(144,212,197);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+}
+
+footer>.links{
+    width: 100%;
+    display: flex;
+    
+    
+}
+.links>a{
+    color: #2C7566;
+}
+
+footer>.social-media{
+    display: flex;
+
+}
+.logoBottom{
+   
+    filter: invert(40%) sepia(12%) saturate(1932%) hue-rotate(116deg) brightness(92%) contrast(84%);
 }
